--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
-python-dotenv==0.20.0
+cffi==1.15.1
+click==8.1.3
+colorama==0.4.6
+cryptography==38.0.3
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.0
 html2text==2020.1.16
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pycparser==2.21
+pyOpenSSL==22.1.0
+python-dotenv==0.21.0
+SQLAlchemy==1.4.42
+Werkzeug==2.2.2
+zipp==3.10.0
