--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ sample_email_dump.txt
 /misc
 .env_sample
 /dp
+/instance
+email_dump.txt
+results_data.csv
+imapencoding.py
+instance/emailtracker.db
+instance/emailtracker.db-journal
