added support for multiple users

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,10 @@
 .env
-email_test.txt
-index.py
-config.py
-clean_dump.txt
-crazy.txt
 /venv
 /__pycache__
-email_dump1.txt
-email_dump2.txt
-email_dump3.txt
-email_dump4.txt
-testimap.py
-sample.eml
-sample_email_dump.txt
 /misc
 .env_sample
 /dp
 /instance
-email_dump.txt
-results_data.csv
-instance/emailtracker.db
-instance/emailtracker.db-journal
+*email_dump.txt
+*results_data.csv
 /old_scans
