--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+altgraph==0.17.3
+Authlib==1.0.1
+certifi==2021.10.8
 cffi==1.15.1
+charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.6
 contourpy==1.0.6
@@ -9,27 +13,34 @@ Flask-SQLAlchemy==3.0.2
 fonttools==4.38.0
 greenlet==2.0.0
 html2text==2020.1.16
+idna==3.3
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
 MarkupSafe==2.1.1
 matplotlib==3.6.2
-numpy==1.23.4
-packaging==21.3
-pandas==1.5.1
+numpy==1.23.5
+packaging==22.0
+pandas==1.5.2
+pefile==2023.2.7
 Pillow==9.3.0
 plotly==5.11.0
 pycparser==2.21
+pyinstaller==5.10.1
+pyinstaller-hooks-contrib==2023.1
 pyOpenSSL==22.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
+pywin32-ctypes==0.2.0
+requests==2.27.1
 seaborn==0.12.1
 six==1.16.0
 SQLAlchemy==1.4.42
 tenacity==8.1.0
 tld==0.12.6
+urllib3==1.26.9
 Werkzeug==2.2.2
 zipp==3.10.0
