--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,8 @@ jobs:
       - name: "Install Dependencies"
         run: |
           python -m pip install --upgrade pip
+          pip uninstall -y virtualenv
+          pip install virtualenv
           python -m virtualenv .venv
           .venv\scripts\activate
           pip install -r requirements.txt
@@ -47,6 +49,8 @@ jobs:
     - name: "Install Dependencies"
       run: |
         python -m pip install --upgrade pip
+        pip uninstall -y virtualenv
+        pip install virtualenv
         python -m virtualenv .venv
         .venv\scripts\activate
         pip install -r requirements.txt
