subprocesses and directoy fixes in build file

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
         pip uninstall -y virtualenv
         pip install virtualenv
         python -m virtualenv .venv
-        source venv/bin/activate
+        source .venv/bin/activate
         pip install -r requirements.txt
 
     - name: "Package Build"
