--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,22 +67,19 @@ jobs:
     name: "Zip Windows Binary"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: vimtor/action-zip@v1
-        with:
-          files: dist/
-          dest: emailtracker_Win.zip
+    - uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r emailtracker_mac.zip dist
 
   zip-macos-binary:
     needs: macOS-build
     name: "Zip MacOS Binary"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: vimtor/action-zip@v1
-        with:
-          files: dist/
-          dest: emailtracker_Mac.zip
+    - uses: montudor/action-zip@v1
+      with:
+        args: zip -qq -r emailtracker_mac.zip dist
+
 
 
 
